explicilty pin urllib to avoid python-etcd to pull latest

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ ntplib==0.3.3
 # utils/service_discovery/config_stores.py
 python-consul==0.4.7
 # utils/service_discovery/config_stores.py
+urllib3<1.23
 python-etcd==0.4.5
 # the libyaml bindings are optional
 pyyaml==3.11
