--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,13 +14,13 @@ environment:
   - PYTHON: C:\\Python27
     PYTHON_VERSION: 2.7.9
     PYTHON_ARCH: 32
-    PYWIN32_URL: https://downloads.sourceforge.net/project/pywin32/pywin32/Build%20219/pywin32-219.win32-py2.7.exe
-    PYWIN32_INSTALL_DIR: pywin32-219-py2.7-win32.egg
+    PYWIN32_URL: https://github.com/mhammond/pywin32/releases/download/b224/pywin32-224.win32-py2.7.exe
+    PYWIN32_INSTALL_DIR: pywin32-224-py2.7-win32.egg
   - PYTHON: C:\\Python27-x64
     PYTHON_VERSION: 2.7.9
     PYTHON_ARCH: 64
-    PYWIN32_URL: http://sourceforge.net/projects/pywin32/files/pywin32/Build%20219/pywin32-219.win-amd64-py2.7.exe/download
-    PYWIN32_INSTALL_DIR: pywin32-219-py2.7-win-amd64.egg
+    PYWIN32_URL: https://github.com/mhammond/pywin32/releases/download/b224/pywin32-224.win-amd64-py2.7.exe
+    PYWIN32_INSTALL_DIR: pywin32-224-py2.7-win-amd64.egg
 cache:
   - C:\projects\dd-agent\.cache
   - C:\projects\dd-agent\vendor\cache
