Fix status page cleaning up warning message after the first run
This also add a feature flag to disable the linter feature if needed.

--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -181,6 +181,9 @@ gce_updated_hostname: yes
 # us to override the standard default location '/proc'
 # procfs_path: /proc
 
+# Disable Python3 validation of python checks
+# disable_py3_validation: false
+
 # ========================================================================== #
 # DogStatsd configuration                                                    #
 # DogStatsd is a small server that aggregates your custom app metrics. For   #
