[pyyaml] allow patching of unsafe pyyaml operations
[utils] changing yaml to ddyaml to avoid clash

[pyyaml] allow reversing of monkey patch

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,12 +24,14 @@ Style/Documentation:
 Style/SingleLineBlockParams:
   Enabled: false
 
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 Lint/RescueWithoutErrorClass:
   Enabled: false
 
 BlockLength:
   Max: 110
 
-Style/EndOfLine:
+Layout/EndOfLine:
   Enabled: false
-
