--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -161,6 +161,24 @@ gce_updated_hostname: yes
 # instead of setting them in the checks' custom_jar_paths option
 # jmx_custom_jars: /jmx-jars/jboss-cli-client.jar:/my/other/custom.jar
 #
+#
+# JMXFetch now collects multiples instances concurrently. The following metrics may
+# help fine-tune the level of concurrency and timeouts that come into play during the
+# collection of metrics from configured instances:
+#
+# thread_pool_size: determines the maximum level of concurrency.
+# jmx_thread_pool_size: 3
+#
+# collection_timeout: the maximum waiting period before timing up on metric collection
+# jmx_collection_timeout: 60
+#
+# reconnection_thread_pool_size: determines the maximum level of concurrency in the reconnection pool.
+# jmx_reconnection_thread_pool_size: 3
+#
+# reconnection_timeout: the maximum waiting period before timing up on instance reconnection
+# jmx_reconnection_timeout: 10
+#
+#
 # Docker labels as tags
 # We can extract docker labels and add them as tags to all metrics reported by service discovery.
 # All you have to do is supply a comma-separated list of label names to extract from containers when found.
