--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -161,6 +161,32 @@ gce_updated_hostname: yes
 # instead of setting them in the checks' custom_jar_paths option
 # jmx_custom_jars: /jmx-jars/jboss-cli-client.jar:/my/other/custom.jar
 #
+#
+# JMXFetch collects multiples instances concurrently. The following metrics may
+# help fine-tune the level of concurrency and timeouts that come into play during the
+# collection of metrics from configured instances:
+#
+# Defines the maximum level of concurrency. Higher concurrency will increase CPU
+# utilization during metric collection. Lower concurrency will result in lower CPU
+# usage but also fewer workers in the event of timeouts to continue work - a value of
+# 1 will process instances serially, each taking up to `jmx_collection_timeout`
+# seconds.
+# jmx_thread_pool_size: 3
+#
+# Defines the maximum waiting period in seconds before timing up on metric collection.
+# jmx_collection_timeout: 60
+#
+# Defines the maximum level of concurrency in the reconnection pool. Higher concurrency
+# will increase CPU utilization during instance recovery/reconnection. Lower concurrency
+# will result in lower CPU usage but also fewer workers in the event of timeouts to continue
+# work - a value of 1 will process instances serially, each taking up to `jmx_reconnection_timeout`
+# seconds.
+# jmx_reconnection_thread_pool_size: 3
+#
+# Determines the maximum waiting period in seconds before timing up on instance reconnection.
+# jmx_reconnection_timeout: 10
+#
+#
 # Docker labels as tags
 # We can extract docker labels and add them as tags to all metrics reported by service discovery.
 # All you have to do is supply a comma-separated list of label names to extract from containers when found.
