--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ env:
     - PIP_CACHE=$HOME/.cache/pip
     - VOLATILE_DIR=/tmp
     - DD_CASHER_DIR=/tmp/casher
-    - INTEGRATIONS_CORE_BRANCH=master
+    - INTEGRATIONS_CORE_BRANCH=agent-v5
   matrix:
     - TRAVIS_FLAVOR=default
     - TRAVIS_FLAVOR=cassandra FLAVOR_VERSION=2.0.17
@@ -47,13 +47,13 @@ env:
 matrix:
   include:
     - python: 2.7
-      sudo: required
-      dist: trusty
+      dist: xenial
       env: TRAVIS_FLAVOR=core_integration
 
 # Override travis defaults with empty jobs
 before_install:
 - rvm install 2.1.5
+- sudo apt-get install libgnutls28-dev
 
 install:
   - git -C $HOME/integrations-core pull || git clone -b $INTEGRATIONS_CORE_BRANCH --depth 1 https://github.com/DataDog/integrations-core.git $HOME/integrations-core
