[build] Ensure pip version is Python2 compatible
Old code was fetching and using the latest pip which no longer supports
Python2. This change ensures that we only use Python v2-compatible
version for our CI/CD.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ default_steps: &default_steps
     - run: |
         sudo apt-get update
         sudo apt install -y libcurl4-openssl-dev libssl-dev
-        pip install -U pip wheel
+        wget https://bootstrap.pypa.io/pip/2.7/get-pip.py
+        python get-pip.py
+        pip install --upgrade wheel
         cd $HOME/integrations-core/datadog_checks_base && python setup.py bdist_wheel && pip install . && cd -
     - run: |
         bundle install
