--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 # CODEOWNERS file for dd-agent repository
 
 # Sectigo root CA rotation runbooks
-/runbooks/sectigo-root-ca-rotation-2025/ @DataDog/agent-release @DataDog/agent-runtime @DataDog/documentation
+/runbooks/sectigo-root-ca-rotation-2025/ @DataDog/agent-build-and-releases @DataDog/agent-runtime @DataDog/Documentation
 
